--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_login: 4.0.0
+  bruno: ^3.1.0
+  flutter_blue_plus: ^1.3.1
 
 dev_dependencies:
   flutter_test:
