--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_login: 4.0.0
   bruno: ^3.1.0
   flutter_blue_plus: ^1.3.1
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
