--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   bruno: ^3.1.0
   flutter_blue_plus: ^1.3.1
   provider: ^6.0.4
+  sqflite: ^2.1.0+1
 
 dev_dependencies:
   flutter_test:
