--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_blue_plus: ^1.3.1
   provider: ^6.0.4
   sqflite: ^2.1.0+1
+  data_table_2: ^2.3.7
 
 dev_dependencies:
   flutter_test:
